# zero_os

./: .gitignore  CMakeLists.txt  Readme.md  gdb_debug_qemu.sh  run_qemu.sh
build_scripts/: build.sh  build_iso_using_docker.sh  build_newlib_using_docker.sh  cmake_build.sh  download_and_compile_newlib.sh
docker/: Dockerfile  docker-compose.yml
docker/build_iso_env/: docker-compose.yml
docker/build_newlib_env/: Dockerfile  docker-compose.yml
iso/boot/grub/: grub.cfg
src/: link.ld
src/common_lib/canvas/: canvas.c  font_data.c
src/common_lib/include/: canvas.h  font_data.h
src/common_lib/include/canvas/: canvas.h
src/common_lib/include/util/: img_utils.h
src/common_lib/util/: img_utils.c
src/include/: common.h  multiboot.h
src/include/cpu/: gdt.h  idt.h  ihandlers.h  tss.h  usermode.h
src/include/device/: device.h
src/include/device/framebuffer/: framebuffer.h
src/include/device/mouse/: mouse.h
src/include/device/null/: null.h
src/include/display/: console.h  lfb.h
src/include/elf/: elf.h  elf_common.h
src/include/event/: event.h
src/include/fs/: vfs.h
src/include/fs/boot_fs/: boot_fs.h
src/include/fs/dev_fs/: dev_fs.h
src/include/fs/root_fs/: root_fs.h
src/include/fs/volume/null/: null.h
src/include/keyboard/: keyboard.h
src/include/memory/: memory_manager.h  page_manager.h
src/include/tasking/: init.h  syscall.h  task_manager.h
src/kernel/: common.asm  kernel.asm  kernel.c
src/kernel/cpu/: gdt.asm  gdt.c  idt.asm  idt.c  ihandlers.asm  ihandlers.c  tss.asm  tss.c  usermode.asm
src/kernel/device/: device.c
src/kernel/device/framebuffer/: framebuffer.c
src/kernel/device/mouse/: mouse.c
src/kernel/device/null/: null.c
src/kernel/display/: console.c
src/kernel/display/lfb/: lfb.c
src/kernel/event/: event.c
src/kernel/fs/: vfs.c
src/kernel/fs/boot_fs/: boot_fs.c
src/kernel/fs/dev_fs/: dev_fs.c
src/kernel/fs/root_fs/: root_fs.c
src/kernel/fs/volume/null/: null.c
src/kernel/keyboard/: keyboard.c
src/kernel/lib/include/string/: k_string.h
src/kernel/lib/str/: k_string.c
src/kernel/lib/tinyprintf/: tinyprintf.c
src/kernel/memory/: malloc.c  memory_manager.c  page_manager.asm  page_manager.c
src/kernel/tasking/: init.c  syscall.c  task_manager.asm  task_manager.c
src/newlib/: Readme.md  config.sub  configure.host
src/newlib/libc/sys/: configure.in
src/newlib/libc/sys/zero_os/: Makefile.am  configure.in  crt0.c  syscalls.c
src/tests/: malloc_tester.c
src/tests/mock/: mock_console_functions.c
src/tools/simple_bezier_font_designer/: index.html  index.js
src/user/: crt0.asm  link.ld
src/user/hello_world/: hello.asm  hello.c
src/user/userlib/: crt0.asm  syscalls.c
src/user/window_manager/include/: screen_object.h
src/user/window_manager/include/screen_objects/: background_object.h  mouse_object.h
src/user/window_manager/resources/: mouse_cursor.data
src/user/window_manager/src/: screen_object.c  window_manager.c
src/user/window_manager/src/screen_objects/: background_object.c  mouse_object.c
